examples/failing/Reserved.purs
module Reserved where

(<) :: Number -> Number -> Number
(<) a b = !(a >= b)
